Fixes tile excel importer error (#11560)
* Prevent error when loading tile excel file

* Add changelog entry

* Add tile excel test

* Add serialized_rollback=True

* Fix typo

* Avoid providing slashed paths

---------

Co-authored-by: Jacob Walls <jwalls@fargeo.com>

--- a/releases/7.6.2.md
+++ b/releases/7.6.2.md
@@ -11,6 +11,7 @@
 -   Fail with 404 rather than 500 (AttributeError) for missing search components in search_home route #[11532](https://github.com/archesproject/arches/issues/11532)
 -   Adds an alert message before running the bulk deletion #[11405](https://github.com/archesproject/arches/issues/11405)
 -   Fixes a bug where getting the json-ld of a resource with many related resources could crash the system #[11572](https://github.com/archesproject/arches/issues/11572)
+-   Fixes regression preventing Tile Excel files from loading in Bulk Data Manager #[11559](https://github.com/archesproject/arches/issues/11559)
 
 ### Dependency changes:
 
