fix geojson/jsonld export issue (#11588)
* fixes jsonld export issue for geojson features
* Adds test

--- a/releases/7.6.3.md
+++ b/releases/7.6.3.md
@@ -4,6 +4,8 @@
 
 -   Fixes bug that prevented some Arches Application front-end components from being loaded #[11561](https://github.com/archesproject/arches/issues/11561)
 
+-   Fix issue with JSON-LD export failing when geojson features have no "id". [11587](https://github.com/archesproject/arches/issues/11587)
+
 ### Dependency changes:
 
 ```
@@ -20,6 +22,7 @@ JavaScript:
 1. Upgrade to version 7.6.0 before proceeding by following the upgrade process in the [Version 7.6.0 release notes](https://github.com/archesproject/arches/blob/dev/7.6.x/releases/7.6.0.md)
 
 2. Upgrade to Arches 7.6.3
+
     ```
     pip install --upgrade arches==7.6.3
     ```
