--- a/releases/7.6.3.md
+++ b/releases/7.6.3.md
@@ -2,9 +2,11 @@
 
 ### Bug Fixes and Enhancements
 
--   Fixes bug that prevented some Arches Application front-end components from being loaded #[11561](https://github.com/archesproject/arches/issues/11561)
+- Fix bug that prevented some Arches Application front-end components from being loaded #[11561](https://github.com/archesproject/arches/issues/11561)
+- Fix issue in which search results do not load if a saved search has no title or description #[11603](https://github.com/archesproject/arches/pull/11603) 
+- Fix issue with JSON-LD export failing when geojson features have no "id". [11587](https://github.com/archesproject/arches/issues/11587)
+- Reduce permissions query to 1 query for all related resources in `get_related_resources` to prevent reports from failing to load #[11575](https://github.com/archesproject/arches/issues/11575)
 
--   Fix issue with JSON-LD export failing when geojson features have no "id". [11587](https://github.com/archesproject/arches/issues/11587)
 
 ### Dependency changes:
 
