--- a/releases/7.6.3.md
+++ b/releases/7.6.3.md
@@ -4,8 +4,9 @@
 
 - Fix bug that prevented some Arches Application front-end components from being loaded #[11561](https://github.com/archesproject/arches/issues/11561)
 - Fix issue in which search results do not load if a saved search has no title or description #[11603](https://github.com/archesproject/arches/pull/11603) 
-- Fix issue with JSON-LD export failing when geojson features have no "id". [11587](https://github.com/archesproject/arches/issues/11587)
+- Fix issue with JSON-LD export failing when geojson features have no "id". #[11587](https://github.com/archesproject/arches/issues/11587)
 - Reduce permissions query to 1 query for all related resources in `get_related_resources` to prevent reports from failing to load #[11575](https://github.com/archesproject/arches/issues/11575)
+- Fix webpack build for Windows instances #[#11606](https://github.com/archesproject/arches/pull/11606)
 
 
 ### Dependency changes:
