purges permissions from the resource.py model (#11622)

--- a/releases/7.6.4.md
+++ b/releases/7.6.4.md
@@ -2,8 +2,8 @@
 
 ### Bug Fixes and Enhancements
 
-- Fix Graph Designer failure when editing large graphs #[11615](https://github.com/archesproject/arches/issues/11615)
-
+-   Remove unnecessary creation of guardian permissions for principal user #[11564](https://github.com/archesproject/arches/issues/11564)
+-   Fix Graph Designer failure when editing large graphs #[11615](https://github.com/archesproject/arches/issues/11615)
 
 ### Dependency changes:
 
