--- a/releases/7.6.4.md
+++ b/releases/7.6.4.md
@@ -4,6 +4,7 @@
 
 -   Remove unnecessary creation of guardian permissions for principal user #[11564](https://github.com/archesproject/arches/issues/11564)
 -   Fix Graph Designer failure when editing large graphs #[11615](https://github.com/archesproject/arches/issues/11615)
+-   Fix failure to download exported search results when using non file-system based storages #[11620](https://github.com/archesproject/arches/issues/11620)
 
 ### Dependency changes:
 
