--- a/releases/7.6.4.md
+++ b/releases/7.6.4.md
@@ -5,6 +5,7 @@
 -   Remove unnecessary creation of guardian permissions for principal user #[11564](https://github.com/archesproject/arches/issues/11564)
 -   Fix Graph Designer failure when editing large graphs #[11615](https://github.com/archesproject/arches/issues/11615)
 -   Fix failure to download exported search results when using non file-system based storages #[11620](https://github.com/archesproject/arches/issues/11620)
+- Cache resource relationship preflabels to improve report load time #[11583](https://github.com/archesproject/arches/issues/11583)
 
 ### Dependency changes:
 
