--- a/releases/7.6.4.md
+++ b/releases/7.6.4.md
@@ -3,6 +3,7 @@
 ### Bug Fixes and Enhancements
 
 -   Remove unnecessary creation of guardian permissions for principal user #[11564](https://github.com/archesproject/arches/issues/11564)
+- Fix migration that sets the initial principal users if a user no longer exists #[11664](https://github.com/archesproject/arches/issues/11664)
 -   Fix Graph Designer failure when editing large graphs #[11615](https://github.com/archesproject/arches/issues/11615)
 -   Fix failure to download exported search results when using non file-system based storages #[11620](https://github.com/archesproject/arches/issues/11620)
 - Cache resource relationship preflabels to improve report load time #[11583](https://github.com/archesproject/arches/issues/11583)
