11679 - Fix bug causing Edit button to not display in the map popup

--- a/releases/7.6.4.md
+++ b/releases/7.6.4.md
@@ -7,6 +7,7 @@
 -   Fix Graph Designer failure when editing large graphs #[11615](https://github.com/archesproject/arches/issues/11615)
 -   Fix failure to download exported search results when using non file-system based storages #[11620](https://github.com/archesproject/arches/issues/11620)
 - Cache resource relationship preflabels to improve report load time #[11583](https://github.com/archesproject/arches/issues/11583)
+- Fix bug causing the Edit button to not display in the map popup #[11679](https://github.com/archesproject/arches/issues/11679)
 
 ### Dependency changes:
 
