--- a/releases/7.6.4.md
+++ b/releases/7.6.4.md
@@ -7,6 +7,7 @@
 - Fix Graph Designer failure when editing large graphs #[11615](https://github.com/archesproject/arches/issues/11615)
 - Fix failure to download exported search results when using non file-system based storages #[11620](https://github.com/archesproject/arches/issues/11620)
 - Cache resource relationship preflabels to improve report load time #[11583](https://github.com/archesproject/arches/issues/11583)
+- Fix for bug that prevents saving tab name changes in a tabbed report #[11617](https://github.com/archesproject/arches/issues/11617) 
 - Fix regression where Arches is no longer overriding Django admin templates #[11668](https://github.com/archesproject/arches/issues/11668)
 - Fix bug causing the Edit button to not display in the map popup #[11679](https://github.com/archesproject/arches/issues/11679)
 
