--- a/releases/7.6.4.md
+++ b/releases/7.6.4.md
@@ -9,6 +9,7 @@
 - Cache resource relationship preflabels to improve report load time #[11583](https://github.com/archesproject/arches/issues/11583)
 - Fix for bug that prevents saving tab name changes in a tabbed report #[11617](https://github.com/archesproject/arches/issues/11617) 
 - Fix regression where Arches is no longer overriding Django admin templates #[11668](https://github.com/archesproject/arches/issues/11668)
+- Fix bug causing app resources with symlink in their path to not resolve #[11689](https://github.com/archesproject/arches/issues/11689)
 - Fix bug causing the Edit button to not display in the map popup #[11679](https://github.com/archesproject/arches/issues/11679)
 
 ### Dependency changes:
