Add reindex_database to 7.6.0 upgrade instructions (#11692)
* Add reindex_database to 7.6.0 upgrade instructions

* Add changelog entry

--- a/releases/7.6.0.md
+++ b/releases/7.6.0.md
@@ -539,9 +539,10 @@ Minor incompatibilities:
     {% endblock arches_translations %}
     ```
 
-13. Within your project, with your Python 3 virtual environment activated run:
+13. Within your project, with your Python 3 virtual environment activated migrate your database and reindex:
     ``` 
     python manage.py migrate
+    python manage.py es reindex_database
     ```
 
 14. Then run:
