--- a/releases/7.6.4.md
+++ b/releases/7.6.4.md
@@ -12,6 +12,7 @@
 - Fix regression where Arches is no longer overriding Django admin templates #[11668](https://github.com/archesproject/arches/issues/11668)
 - Fix bug causing app resources with symlink in their path to not resolve #[11689](https://github.com/archesproject/arches/issues/11689)
 - Fix bug causing the Edit button to not display in the map popup #[11679](https://github.com/archesproject/arches/issues/11679)
+- Fix enabling multiple languages if the `APP_NAME` system settings tile had never been updated #[11660](https://github.com/archesproject/arches/issues/11660)
 
 ### Dependency changes:
 
