Prevent Arches templates from overriding App templates (#11731)
* Suspend arches level template overrides

--- a/releases/7.6.5.md
+++ b/releases/7.6.5.md
@@ -2,7 +2,9 @@
 
 ### Bug Fixes and Enhancements
 
-- Fix Activity Stream id value #[11727](https://github.com/archesproject/arches/issues/11727)
+- Fix Activity Stream id value [#11727](https://github.com/archesproject/arches/issues/11727)
+- Prevent Arches templates from overriding App templates [#11731]https://github.com/archesproject/arches/pull/11731
+
 
 ### Dependency changes:
 
