Add regression test re #11716

--- a/releases/7.6.5.md
+++ b/releases/7.6.5.md
@@ -4,7 +4,7 @@
 
 - Fix Activity Stream id value [#11727](https://github.com/archesproject/arches/issues/11727)
 - Prevent Arches templates from overriding App templates [#11731]https://github.com/archesproject/arches/pull/11731
-
+- Fix search export when `FORCE_SCRIPT_NAME` is used #[11716](https://github.com/archesproject/arches/issues/11716)
 
 ### Dependency changes:
 
