--- a/releases/7.6.5.md
+++ b/releases/7.6.5.md
@@ -31,3 +31,6 @@ JavaScript:
     ```
     sudo service apache2 reload
     ```
+
+4. (Optional) The sass JavaScript dependency was pinned to [version 1.78 in the arches-dev-dependencies](https://github.com/archesproject/arches-dev-dependencies/pull/32) repository. This was done to silence unhelpful deprecation warnings. By default, this change will only affect projects newly created with Arches v7.6.5. Existing projects can take advantage of this change by ensuring their project's package.json file points to either the `dev/7.6.x` or `stable/7.6.5` branch of `arches-dev-dependencies` and then reinstalling and rebuilding their front-end dependencies.
+
