Add changelog entry for #11742

--- a/releases/7.6.6.md
+++ b/releases/7.6.6.md
@@ -2,6 +2,8 @@
 
 ### Bug Fixes and Enhancements
 
+- Fix inability to remove a second parent from a concept [#11742](https://github.com/archesproject/arches/pull/11742)
+
 
 ### Dependency changes:
 
