--- a/releases/7.6.6.md
+++ b/releases/7.6.6.md
@@ -4,6 +4,7 @@
 
 - Fix inability to remove a second parent from a concept [#11742](https://github.com/archesproject/arches/pull/11742)
 - Fix slow reports when used on systems with many related resources [#11748](https://github.com/archesproject/arches/pull/11748)
+- Reimplement superuser bypass of nodegroup permission check [#11744](https://github.com/archesproject/arches/pull/11744)
 
 
 ### Dependency changes:
