removes cantaloupe directory creation (#11754)

--- a/releases/7.6.7.md
+++ b/releases/7.6.7.md
@@ -1,8 +1,9 @@
 ## Arches 7.6.7 Release Notes
 
 ### Bug Fixes and Enhancements
-- ANALYSIS_COORDINATE_SYSTEM_SRID string compatibility [#11714](https://github.com/archesproject/arches/issues/11714)
 
+-   ANALYSIS_COORDINATE_SYSTEM_SRID string compatibility [#11714](https://github.com/archesproject/arches/issues/11714)
+-   Removes need for required cantaloupe directory [#10289](https://github.com/archesproject/arches/issues/10289)
 
 ### Dependency changes:
 
@@ -29,4 +30,3 @@ JavaScript:
     ```
     sudo service apache2 reload
     ```
-
